base overflow fix

--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,8 @@
   padding: 0;
   border: 0;
   margin: 0;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 .row{
   margin: 0;
@@ -523,9 +525,20 @@ footer{
   }
 }
 @media (max-width: 321px){
+/*   html{
+    overflow-x: hidden;
+    max-width: 100vw;
+  } */
   .nav-link, .input2, .login, .dropdown-item{
     font-size: 4vw;
   }
+  /* nav.navbar{
+    padding: 0;
+    max-width: 100vw;
+  }
+  .nav > .container-fluid{
+    padding: 0;
+  } */
 }
 
 
